Deployment/spring-boot-api/overlays/dev/sizing.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: spring-boot-api
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: spring-boot-api
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 50m
              memory: 50Mi
