Deployment/spring-boot-api/overlays/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: spring-boot-api
spec:
  ingressClassName: traefik
  rules:
  - host: spring-boot-demo.apps.mdlwr.com
    http:
      paths:
      - backend:
          serviceName: spring-boot-api
          servicePort: 8080
